# yolo_active_learning

./: .env.example  .gitignore  README.md  active_learning.sh  clear_empty_labels.py  config.yaml  download_labels.py  download_yt_videos.py  fix_video_format.py  last_execution.json  main.py  process_video.py  pyproject.toml  upload_labels.py
.github/workflows/: active-learning.yaml
data/: config.yaml  config.yaml.example
modules/: downloader.py  formatter.py  label_manager.py  processor.py  uploader.py  utils.py
