[tool.poetry]
name = "yolo-active-learning"
version = "0.1.0"
description = ""
authors = ["Daniel García Peña <info@iamdgarcia.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
yt-dlp = "^2024.12.23"
python-dotenv = "^1.0.1"
ultralytics = "^8.3.58"
cvat-sdk = "^2.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
